--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,95 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Entornos virtuales
 venv/
 env/
+ENV/
+
+# Base de datos
+*.db
+*.sqlite3
+*.sqlite
+mantenimiento.db
+instance/
+
+# Archivos de entorno
 .env
+.env.local
+.env.*.local
 
-# Base de datos SQLite (opcional, si quieres incluirla en el repositorio, quita esta línea)
-# mantenimiento.db
+# Archivos de configuración local
+config.py
 
-# Archivos subidos por usuarios
-uploads/*
+# Archivos de IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Archivos de sistema operativo
+.DS_Store
+Thumbs.db
+
+# Archivos de logs
+*.log
+
+# Archivos de caché
+.cache/
+.pytest_cache/
+.mypy_cache/
+
+# Directorio de archivos subidos
+uploads/
+
+# Archivos de cobertura
+htmlcov/
+.coverage
+.coverage.*
+
+# Archivos de configuración local
+*.local
 !uploads/.gitkeep
+
+# Environment variables
+.env
+.venv
+env/
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+*.log
 
 # Archivos del sistema
 .DS_Store
 Thumbs.db
+
+# Project specific
+data/
+!data/example/
+!data/README.md
